Add UI component for pagination

--- a/src/ggrc/assets/mustache/base_objects/tree_view_filter.mustache
+++ b/src/ggrc/assets/mustache/base_objects/tree_view_filter.mustache
@@ -42,6 +42,11 @@
               <input type="submit" class="btn btn-small btn-info" name="" value="Filter">
             </div>
           </div>
+          <div class="filter-pagination-wrap">
+              <div class="filter-pagination">
+                  <tree-view-pagination/>
+              </div>
+          </div>
         </div>
 
       </div>
