--- a/src/ggrc/assets/mustache/assessments/tree_pagination.mustache
+++ b/src/ggrc/assets/mustache/assessments/tree_pagination.mustache
@@ -6,5 +6,5 @@
 }}
 
 <footer style="margin: 0 16px" class="pull-right">
-    <tree-view-pagination/>
+    <tree-view-pagination count="page_count"/>
 </footer>
