--- a/src/ggrc/assets/mustache/base_objects/tree_view_filter.mustache
+++ b/src/ggrc/assets/mustache/base_objects/tree_view_filter.mustache
@@ -44,7 +44,7 @@
           </div>
           <div class="filter-pagination-wrap">
               <div class="filter-pagination">
-                  <tree-view-pagination/>
+                  {{{> "/static/mustache/assessments/tree_pagination.mustachee"}}}
               </div>
           </div>
         </div>
