--- a/src/ggrc/assets/mustache/assessments/tree_footer.mustache
+++ b/src/ggrc/assets/mustache/assessments/tree_footer.mustache
@@ -6,5 +6,5 @@
 }}
 
 <footer style="margin: 0 16px" class="pull-right">
-    <tree-view-pagination/>
+    {{{> "/static/mustache/assessments/tree_pagination.mustachee"}}}
 </footer>
