fix pull request by comment

--- a/src/ggrc/assets/mustache/assessments/tree_footer.mustache
+++ b/src/ggrc/assets/mustache/assessments/tree_footer.mustache
@@ -5,6 +5,6 @@
     Maintained By: anze@reciprocitylabs.com
 }}
 
-<footer style="margin: 0 16px" class="pull-right">
+<footer class="footer-wrapper pull-right">
     {{{> "/static/mustache/assessments/tree_pagination.mustachee"}}}
 </footer>
