--- a/src/ggrc/assets/stylesheets/_common.scss
+++ b/src/ggrc/assets/stylesheets/_common.scss
@@ -455,6 +455,10 @@ select.multiple-selector {
   border-bottom: none !important;
 }
 
+.footer-wrapper {
+  padding: 0 16px;
+}
+
 // Datepicker
 .ui-datepicker {
   .ui-datepicker-prev,
