fix default parameters for paging request

--- a/src/ggrc/assets/mustache/assessments/tree_pagination.mustache
+++ b/src/ggrc/assets/mustache/assessments/tree_pagination.mustache
@@ -31,7 +31,7 @@
             </a>
         </li>
         <li>
-            <input type="text" class="input" value="{{paging.current}}">
+            <input type="text" class="input" placeholder="{{page_placeholder paging.current paging.count}}">
         </li>
         <li>
             <a href="javascript://" data-page="{{math paging.current "+" 1}}">
