--- a/src/ggrc/assets/stylesheets/_widget.scss
+++ b/src/ggrc/assets/stylesheets/_widget.scss
@@ -122,16 +122,26 @@
             border-left-width: 1px;
           }
         }
+        &.disabled {
+          a {
+            i {
+              color: $gray;
+            }
+          }
+        }
         a {
-          color: $black;
           border: 1px solid $widgetBorder;
           border-left-width: 0;
           line-height: 24px;
           background: $white;
           padding: 0 10px;
-          &:hover {
-            color: $gray;
+          i {
+            color: $black;
+            &:hover {
+              color: $gray;
+            }
           }
+
         }
         input {
           vertical-align: top;
