--- a/src/ggrc/assets/stylesheets/_widget.scss
+++ b/src/ggrc/assets/stylesheets/_widget.scss
@@ -155,6 +155,9 @@
           width: 120px;
           float: left;
           text-align: center;
+          &:focus {
+            border-color: $widgetBorder;
+          }
         }
       }
     }
