--- a/src/ggrc/assets/mustache/base_objects/tree_view_filter.mustache
+++ b/src/ggrc/assets/mustache/base_objects/tree_view_filter.mustache
@@ -6,8 +6,8 @@
 }}
 
   <div class="sticky sticky-header filter-holder" {{#filter_is_hidden}}style="height: 0px; margin-bottom: 0px;"{{/filter_is_hidden}} data-height="42" data-margin-bottom="25">
-    <div class="sticky-filter inner-filter-sticky">
-      <div class="inline-filtering clearfix" {{ (el) -> el.ggrc_controllers_tree_filter() }} >
+      <div class="sticky-filter inner-filter-sticky">
+      <div class="inline-filtering clearfix {{#if_assessment_instance}}ggrc-pagination{{/if_assessment_instance}}" {{ (el) -> el.ggrc_controllers_tree_filter() }} >
 
         <div class="fluid-wrap">
           <div class="filter-title-wrap">
@@ -42,11 +42,13 @@
               <input type="submit" class="btn btn-small btn-info" name="" value="Filter">
             </div>
           </div>
+          {{#if_assessment_instance}}
           <div class="filter-pagination-wrap">
               <div class="filter-pagination">
                   {{{> "/static/mustache/assessments/tree_pagination.mustachee"}}}
               </div>
           </div>
+          {{/if_assessment_instance}}
         </div>
 
       </div>
