--- a/src/ggrc/assets/mustache/people/popover.mustache
+++ b/src/ggrc/assets/mustache/people/popover.mustache
@@ -14,7 +14,7 @@
     </span></a>
   {{else}}
     <a data-test-id="text_manager_7a906d2e" href="/people/{{id}}"><span
-            class="person-tooltip-trigger" data-placement="top">
+            class="person-tooltip-trigger" data-placement="right">
       {{firstnonempty name email}}
     </span></a>
   {{/if}}
@@ -26,7 +26,7 @@
   <div class="custom-popover-content">
     <div class="preview-container person-preview">
       <div class="row-fluid">
-        <div class="span8">
+        <div class="span12">
           <div class="profile-info">
             <ul>
               <li><h4>{{firstnonempty name email}}
