add 3rd level treeview to widgets except risk, workflow, threat

--- a/src/ggrc/assets/stylesheets/modules/_modal.scss
+++ b/src/ggrc/assets/stylesheets/modules/_modal.scss
@@ -875,10 +875,12 @@
       &:nth-child(even) {
         background: #fafafa;
       }
-      .openclose {
+      .status-container {
         .status-label {
-          margin-top: 8px;
+          margin-top: 4px;
         }
+      }
+      .openclose {
         i {
           margin-top: 4px !important;
         }
