--- a/src/ggrc/assets/stylesheets/modules/_tree-content.scss
+++ b/src/ggrc/assets/stylesheets/modules/_tree-content.scss
@@ -13,9 +13,10 @@
 ul.new-tree {
   @extend %reset-list;
   margin-bottom: 40px;
+  .status-container,
   .openclose {
     cursor: pointer;
-    width: 60px;
+    width: 30px;
     float: left;
     .dashboard & {
       width: auto;
@@ -134,6 +135,7 @@ ul.new-tree {
             }
           }
         }
+        .status-container,
         .openclose,
         .select {
           padding: 6px 0;
@@ -165,6 +167,7 @@ ul.new-tree {
           border-bottom: none;
         }
         > .item-main {
+          > .status-container,
           > .openclose {
             > .item-wrap {
               border-bottom: none;
@@ -332,6 +335,7 @@ ul.new-tree {
       }
       .dashboard & {
         > .item-main {
+          > .status-container,
           > .openclose {
             > .item-wrap {
               border-color: transparent;
@@ -372,6 +376,7 @@ ul.new-tree {
         .dashboard & {
           > .item-main {
             background: none;
+            > .status-container,
             > .openclose {
               > .item-wrap {
                 margin: 0;
@@ -382,6 +387,7 @@ ul.new-tree {
           &.item-open {
             margin-bottom: 20px;
             > .item-main {
+              > .status-container,
               > .openclose {
                 > .item-wrap {
                   border-color: transparent;
