correct openclose behavior/appearance

--- a/src/ggrc/assets/stylesheets/modules/_tree-content.scss
+++ b/src/ggrc/assets/stylesheets/modules/_tree-content.scss
@@ -17,6 +17,10 @@ ul.new-tree {
     cursor: pointer;
     width: 60px;
     float: left;
+    .fa {
+      display: inline-block;
+      width: 20px;
+    }
     .dashboard & {
       width: auto;
       float: none;
