--- a/src/ggrc/assets/mustache/base_objects/open_close.mustache
+++ b/src/ggrc/assets/mustache/base_objects/open_close.mustache
@@ -4,7 +4,7 @@
     Created By: urban@reciprocitylabs.com
     Maintained By: urban@reciprocitylabs.com
 }}
-<div class="openclose">
+<div class="openclose{{^if draw_children}}__empty{{/if}}" >
   {{#if_instance_of instance "Cycle|CycleTaskGroup|CycleTaskGroupObjectTask"}}
     <span class="status-label" {{addclass "status-" instance.status}} {{addclass "status-" instance.overdue}}></span>
   {{else}}
