--- a/src/ggrc/assets/stylesheets/_common.scss
+++ b/src/ggrc/assets/stylesheets/_common.scss
@@ -77,9 +77,15 @@ select {
   .entry-list & {
     margin: 5px 10px 0 4px !important;
   }
-  .inner-tree & {
-    margin: 10px 5px 0 10px;
+
+  .openclose__empty & {
+    margin: 16px 10px 0 10px;
   }
+  .inner-tree &,
+  .inner-tree .openclose__empty & {
+      margin: 10px 5px 0 10px;
+  }
+
   .dashboard-tree & {
     margin: 9px 10px 0 4px;
   }
