--- a/src/ggrc_workflows/assets/mustache/cycle_task_group_object_tasks/info.mustache
+++ b/src/ggrc_workflows/assets/mustache/cycle_task_group_object_tasks/info.mustache
@@ -115,7 +115,9 @@
 
       <div class="row-fluid wrap-row">
         <div class="span12">
-          {{{render "/static/mustache/base_templates/mapped_objects.mustache" instance=instance }}}
+          {{^if_equals instance.status 'Verified'}}
+            {{{render "/static/mustache/base_templates/mapped_objects.mustache" instance=instance }}}
+          {{/if}}
         </div>
       </div>
 
